--- a/static/html/default/templates/inventario/comparativos/c4.html
+++ b/static/html/default/templates/inventario/comparativos/c4.html
@@ -15,12 +15,12 @@
     <table id="inv" class="table bordered" style="text-align:center;">
         <thead>
             <tr>
-                <th>Linea</th>
+                <th>Línea</th>
                 <th>Proveedor</th>
                 <th>Estilo</th>
                 <th>Color</th>
-                <th>Teorico</th>
-                <th>Fisico</th>
+                <th>Teórico</th>
+                <th>Físico</th>
                 <th>Diferencia</th>
             </tr>
         </thead>
@@ -39,13 +39,13 @@
                 {color}
             </td>
             <td>
-                <span class="t_{linea}{proveedor}{estilo}{color}">{stock}</span>
+                <span class="t_{id_linea}{id_proveedor}{estilo}{id_color}">{stock}</span>
             </td>
             <td>
-                <input type="text" class="f_{linea}{proveedor}{estilo}{color}" value="0" onchange="difHandler(event, '{linea}{proveedor}{estilo}{color}');" />
+                <input type="text" class="f_{id_linea}{id_proveedor}{estilo}{id_color}" value="0" onchange="difHandler(event, '{id_linea}{id_proveedor}{estilo}{id_color}');" />
             </td>
             <td>
-                <span class="d_{linea}{proveedor}{estilo}{color}"></span>
+                <span class="d_{id_linea}{id_proveedor}{estilo}{id_color}"></span>
             </td>
         </tr>
         <!-- END inventario -->
