--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -217,7 +217,7 @@
             <br/>
 
 
-            <div class="page-region" style="padding-left:30px; padding-top: 50px;">
+            <div class="page-region" style="padding-left:30px; padding-top: 50px;padding-right: 15px;">
                 {content}
             </div>
             <div style="clear:both;"></div>
