--- a/static/html/default/templates/inventario/trasladoExport.html
+++ b/static/html/default/templates/inventario/trasladoExport.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+    </head>
     <body>
         <div style="padding:15px;padding-bottom:25px;background:#EFEFEF;border-radius:12px 12px 12px 12px;margin-right:20px;">
             <div style="text-align:right;">Impreso por:&nbsp; {usuario} - {timestamp}</div>
