--- a/static/html/default/templates/inventario/traslado_listado.html
+++ b/static/html/default/templates/inventario/traslado_listado.html
@@ -74,11 +74,20 @@
     <hr/>
     <br />
     <br />
-    <div id="bigbox" style="margin:15px;display:!none;">
-        <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;" >
+    <div class="panel span12">
+        <div class="panel-header">
+            <i class="icon-clock"></i>
+            Historial
+        </div>
+        <div class="panel-content">
+            <div id="bigbox" style="margin:15px;display:!none;">
+                <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;" >
 
+                </div>
+            </div>
         </div>
     </div>
+    
     <form method="post" action="/{systemModuleName}/inventario/imprimirTraslado" target="blank" id="frmImp">
         <input type="hidden" name="id" value="" id="id_" />
         <input type="hidden" name="transaccion" value="" id="transaccion" />
